--- a/templates/recipe-generator.html
+++ b/templates/recipe-generator.html
@@ -13,11 +13,11 @@
 
     <h2>Enter the details of your product</h2>
 
-    <form class="" action="/product-description" method="post">
+    <form class="" action="/recipe-generator" method="post">
 
       <div class="mb-3">
         <label class="form-label">Product Title</label>
-        <input type="text" class="form-control" name="productDescription" placeholder="eg. Apple iPhone">
+        <input type="text" class="form-control" name="recipeDescription" placeholder="eg. Apple iPhone">
         <div class="form-text">Enter the title of the Product you would like to receive a description for.</div>
       </div>
 
