--- a/templates/includes/layout.html
+++ b/templates/includes/layout.html
@@ -50,35 +50,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="/product-description">Product Description</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="/job-description">Job Description</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="/tweet-ideas">Tweet Content</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="/cold-emails">Cold Email</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="/social-media">Social Ads</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="/business-pitch">Pitch Ideas</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="/video-ideas">Video Ideas</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="/video-description">Video Description</a>
+                <a class="nav-link" href="/recipe-generator">Recipe Generator</a>
               </li>
 
             </ul>
