--- a/templates/includes/layout.html
+++ b/templates/includes/layout.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="This is an AI Content Generator Tool Build by Skolo Online">
-    <meta name="author" content="Zatosh Nakamoto">
-    <title>Skolo Online Content Generator</title>
+    <meta name="description" content="This is an AI Content Generator Tool Built by Tim Dean">
+    <meta name="author" content="Tim Dean">
+    <title>dean.guru</title>
 
     <!-- Bootstrap core CSS -->
     <!-- CSS only -->
@@ -39,7 +39,7 @@
 
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Skolo Online</a>
+          <a class="navbar-brand" href="/">dean.guru</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
