--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,10 @@
 {% block body %}
 <main class="container">
   <div class="bg-light p-5 rounded mt-5">
-    <h1>Skolo Online AI Content Generator with OpenAI GPT-3</h1>
-    <p class="lead">This example was created as part of the Skolo Online YouTube channel. it is a web application
-    created in Flask that can be used to generate random content using Artificial Intelligence API from OpenAI.
+    <h1>dean.guru AI Home</h1>
+    <p class="lead">This is a project of mine to explore cloud automation as well as AI concepts.
     </p>
-    <p class="lead">You can use this content generator to create blog post ideas, blog details, social media content etc. Just
-     give it a try and remember to leave us some feedback. </p>
+    <p class="lead">Feel free to use any of these tools for fun! </p>
   </div>
 
 
@@ -26,7 +24,7 @@
             Recipe Generator
           </div>
           <div class="card-body">
-            <h5 class="card-title"> 🛍️ Generate Recipes ️</h5>
+            <h5 class="card-title"> 🍕 Generate Recipes ️</h5>
             <p class="card-text">Generate random recipes with ingredients here.</p>
             <a href="/recipe-generator" class="btn btn-primary">Get Started</a>
           </div>
