--- a/templates/recipe-generator.html
+++ b/templates/recipe-generator.html
@@ -8,10 +8,10 @@
   <div class="bg-light p-5 rounded mt-5">
     <h1>🍔 Generate Recipes 🥦 ️</h1>
     <p class="lead">
-      Generate product descriptions for any types of products, simply enter the name and productdescription to get started.
+      Generate random recipes for any combination of foods.
     </p>
 
-    <h2>Enter the details of your product</h2>
+    <h2>Enter the ingredients you would like to work with.</h2>
 
     <form class="" action="/recipe-generator" method="post">
 
